--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,8 @@
 			<artifactId>feign-jackson</artifactId>
 			<version>${feign.version}</version>
 		</dependency>
-		<!-- Lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.6</version>
-		</dependency>
 
+		<!-- Commons Lang -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
