For #21 Removed Proxy implementation and moved to Cactoos

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 			<version>3.9</version>
 		</dependency>
 
+		<!-- Cactoos -->
+		<dependency>
+			<groupId>org.cactoos</groupId>
+			<artifactId>cactoos</artifactId>
+			<version>0.41</version>
+		</dependency>
+
 		<!-- Junit 5 -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
