SImple readme - for #23

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ addons:
     organization: "sigrist-github" 
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install 
+  # sonar:sonar
