--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 
 	<build>
 		<plugins>
+			<!-- Maven compiler in order to understand java modules -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
